RESOLVED FIXED272957
[Unified Text Replacement] Selection is sometimes incorrect after text replacement
https://bugs.webkit.org/show_bug.cgi?id=272957
Summary [Unified Text Replacement] Selection is sometimes incorrect after text replac...
Richard Robinson
Reported 2024-04-18 22:13:25 PDT
Attachments
Richard Robinson
Comment 1 2024-04-18 22:16:29 PDT
EWS
Comment 2 2024-04-21 15:21:58 PDT
Committed 277798@main (b783bcea8eee): <https://commits.webkit.org/277798@main> Reviewed commits have been landed. Closing PR #27499 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.