[Unified Text Replacement] Selection is sometimes incorrect after text replacement https://bugs.webkit.org/show_bug.cgi?id=272957 rdar://125097437

Reviewed by Wenson Hsieh.

After text replacement, ensure the replaced text is selected.

To ensure the selection is always correct, keep track of the character offsets of the ranges
instead of relying on the live ranges automatically updating.

* Source/WebKit/WebProcess/WebPage/Cocoa/UnifiedTextReplacementController.mm:
(WebKit::UnifiedTextReplacementController::textReplacementSessionDidReceiveReplacements):
(WebKit::UnifiedTextReplacementController::textReplacementSessionDidUpdateStateForReplacement):
(WebKit::UnifiedTextReplacementController::didEndTextReplacementSession):
(WebKit::UnifiedTextReplacementController::updateStateForSelectedReplacementIfNeeded):

Canonical link: https://commits.webkit.org/277798@main